# Log-Analyzer

./: CMakeLists.txt  README.md
include/: LogAnalyzer.h
scr/: LogAnalyzer.cpp  main.cpp
test/: test_analyzer.cpp
